buttons alignment fix

--- a/src/components/css/Pomodore.module.css
+++ b/src/components/css/Pomodore.module.css
@@ -30,6 +30,8 @@
     display: flex;
     justify-content: space-around;
     margin-top:30px;
+    background-color:rgb(117, 119, 115);
+    align-items: flex-end;
     align-items: baseline;
 }
 
@@ -98,17 +100,16 @@
         width:250px;
         height:250px;
         justify-content: space-around;
-        align-items: center;
-        flex-wrap: wrap;
+        align-items: baseline;
     }
     h5{
         margin-top: 10px;
     }
     .dropdown{
-        margin-top:10px;
         height:50px;
         width:100px;
         font-size:1.1rem;
+
     }
     .startstop{
         font-size:1rem;
